@@ -2088,7 +2088,7 @@ const struct rt_functab OBJ[] = {
 	NULL, /* bbox */
 	NULL, /* volume */
 	NULL, /* surface */
-	NULL, /* centroid */ 
+	NULL, /* centroid */
 	NULL
     },
 
